Fix horizontal scrolling and improve layout; prompt: something is not right on the right side of the screen when zooming in, the container reaches all the way to the scren edge, and it gets scrollable in horizontal direction. Could you make sure this auto-scales properly?; Changes: added box-sizing: border-box, overflow-x: hidden, changed background-position to top, added padding 2rem to body, increased banner margin to 12rem

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@ html {
   font-size: min(2vw, 16px);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family:
     Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -9,13 +13,15 @@ body {
   background: url(/images/Web-Banner-img-bw.png);
   background-color: black;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: contain;
   background-attachment: fixed;
   box-shadow: 0 0 100px 100px black inset;
   margin: 0;
+  padding: 0 2rem;
   text-align: center;
   font-size: 1.4rem;
+  overflow-x: hidden;
 }
 
 @media (max-width: 420px) {
@@ -103,7 +109,7 @@ footer img {
 
 .banner {
   max-width: min(80vw, 800px);
-  margin: 8rem auto 3rem;
+  margin: 12rem auto 3rem;
   opacity: 0.8;
 }
 
